pluma_parser/tests/snapshots/parse_success__call_number_arg.snap
---
source: pluma_parser/tests/parse_success.rs
expression: func 1
---

=== Source ===
func 1

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        0,
        6,
    ),
    body: [
        TopLevelStatementNode {
            pos: (
                0,
                6,
            ),
            kind: Expr(
                ExprNode {
                    pos: (
                        0,
                        6,
                    ),
                    kind: Call(
                        CallNode {
                            pos: (
                                0,
                                6,
                            ),
                            callee: ExprNode {
                                pos: (
                                    0,
                                    4,
                                ),
                                kind: Identifier(
                                    IdentifierNode {
                                        pos: (
                                            0,
                                            4,
                                        ),
                                        name: "func",
                                    },
                                ),
                                typ: Unknown,
                            },
                            args: [
                                ExprNode {
                                    pos: (
                                        5,
                                        6,
                                    ),
                                    kind: Literal(
                                        LiteralNode {
                                            pos: (
                                                5,
                                                6,
                                            ),
                                            kind: IntDecimal(
                                                1,
                                            ),
                                        },
                                    ),
                                    typ: Unknown,
                                },
                            ],
                            typ: Unknown,
                        },
                    ),
                    typ: Unknown,
                },
            ),
        },
    ],
}

