pluma_parser/tests/snapshots/parse_success__call_spanning_multiple_lines.snap
---
source: pluma_parser/tests/parse_success.rs
expression: "if thing then {\n  print \"yep!\"\n} else {\n  print \"nope!\"\n}"
---

=== Source ===
if thing then {
  print "yep!"
} else {
  print "nope!"
}

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        0,
        57,
    ),
    body: [
        TopLevelStatementNode {
            pos: (
                0,
                57,
            ),
            kind: Expr(
                ExprNode {
                    pos: (
                        0,
                        57,
                    ),
                    kind: Call(
                        CallNode {
                            pos: (
                                0,
                                57,
                            ),
                            callee: ExprNode {
                                pos: (
                                    0,
                                    37,
                                ),
                                kind: MultiPartIdentifier(
                                    [
                                        IdentifierNode {
                                            pos: (
                                                0,
                                                2,
                                            ),
                                            name: "if",
                                        },
                                        IdentifierNode {
                                            pos: (
                                                9,
                                                13,
                                            ),
                                            name: "then",
                                        },
                                        IdentifierNode {
                                            pos: (
                                                33,
                                                37,
                                            ),
                                            name: "else",
                                        },
                                    ],
                                ),
                                typ: Unknown,
                            },
                            args: [
                                ExprNode {
                                    pos: (
                                        3,
                                        8,
                                    ),
                                    kind: Identifier(
                                        IdentifierNode {
                                            pos: (
                                                3,
                                                8,
                                            ),
                                            name: "thing",
                                        },
                                    ),
                                    typ: Unknown,
                                },
                                ExprNode {
                                    pos: (
                                        14,
                                        32,
                                    ),
                                    kind: Block(
                                        BlockNode {
                                            pos: (
                                                14,
                                                32,
                                            ),
                                            params: [],
                                            body: [
                                                StatementNode {
                                                    pos: (
                                                        18,
                                                        29,
                                                    ),
                                                    kind: Expr(
                                                        ExprNode {
                                                            pos: (
                                                                18,
                                                                29,
                                                            ),
                                                            kind: Call(
                                                                CallNode {
                                                                    pos: (
                                                                        18,
                                                                        29,
                                                                    ),
                                                                    callee: ExprNode {
                                                                        pos: (
                                                                            18,
                                                                            23,
                                                                        ),
                                                                        kind: Identifier(
                                                                            IdentifierNode {
                                                                                pos: (
                                                                                    18,
                                                                                    23,
                                                                                ),
                                                                                name: "print",
                                                                            },
                                                                        ),
                                                                        typ: Unknown,
                                                                    },
                                                                    args: [
                                                                        ExprNode {
                                                                            pos: (
                                                                                25,
                                                                                29,
                                                                            ),
                                                                            kind: Literal(
                                                                                LiteralNode {
                                                                                    pos: (
                                                                                        25,
                                                                                        29,
                                                                                    ),
                                                                                    kind: Str(
                                                                                        "yep!",
                                                                                    ),
                                                                                },
                                                                            ),
                                                                            typ: Unknown,
                                                                        },
                                                                    ],
                                                                    typ: Unknown,
                                                                },
                                                            ),
                                                            typ: Unknown,
                                                        },
                                                    ),
                                                },
                                            ],
                                        },
                                    ),
                                    typ: Unknown,
                                },
                                ExprNode {
                                    pos: (
                                        38,
                                        57,
                                    ),
                                    kind: Block(
                                        BlockNode {
                                            pos: (
                                                38,
                                                57,
                                            ),
                                            params: [],
                                            body: [
                                                StatementNode {
                                                    pos: (
                                                        42,
                                                        54,
                                                    ),
                                                    kind: Expr(
                                                        ExprNode {
                                                            pos: (
                                                                42,
                                                                54,
                                                            ),
                                                            kind: Call(
                                                                CallNode {
                                                                    pos: (
                                                                        42,
                                                                        54,
                                                                    ),
                                                                    callee: ExprNode {
                                                                        pos: (
                                                                            42,
                                                                            47,
                                                                        ),
                                                                        kind: Identifier(
                                                                            IdentifierNode {
                                                                                pos: (
                                                                                    42,
                                                                                    47,
                                                                                ),
                                                                                name: "print",
                                                                            },
                                                                        ),
                                                                        typ: Unknown,
                                                                    },
                                                                    args: [
                                                                        ExprNode {
                                                                            pos: (
                                                                                49,
                                                                                54,
                                                                            ),
                                                                            kind: Literal(
                                                                                LiteralNode {
                                                                                    pos: (
                                                                                        49,
                                                                                        54,
                                                                                    ),
                                                                                    kind: Str(
                                                                                        "nope!",
                                                                                    ),
                                                                                },
                                                                            ),
                                                                            typ: Unknown,
                                                                        },
                                                                    ],
                                                                    typ: Unknown,
                                                                },
                                                            ),
                                                            typ: Unknown,
                                                        },
                                                    ),
                                                },
                                            ],
                                        },
                                    ),
                                    typ: Unknown,
                                },
                            ],
                            typ: Unknown,
                        },
                    ),
                    typ: Unknown,
                },
            ),
        },
    ],
}

