pluma_parser/tests/snapshots/parse_success__call_tuple_arg.snap
---
source: pluma_parser/tests/parse_success.rs
expression: "func (1, \"wow\")"
---

=== Source ===
func (1, "wow")

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        0,
        15,
    ),
    body: [
        TopLevelStatementNode {
            pos: (
                0,
                15,
            ),
            kind: Expr(
                ExprNode {
                    pos: (
                        0,
                        15,
                    ),
                    kind: Call(
                        CallNode {
                            pos: (
                                0,
                                15,
                            ),
                            callee: ExprNode {
                                pos: (
                                    0,
                                    4,
                                ),
                                kind: Identifier(
                                    IdentifierNode {
                                        pos: (
                                            0,
                                            4,
                                        ),
                                        name: "func",
                                    },
                                ),
                                typ: Unknown,
                            },
                            args: [
                                ExprNode {
                                    pos: (
                                        5,
                                        15,
                                    ),
                                    kind: UnlabeledTuple(
                                        [
                                            ExprNode {
                                                pos: (
                                                    6,
                                                    7,
                                                ),
                                                kind: Literal(
                                                    LiteralNode {
                                                        pos: (
                                                            6,
                                                            7,
                                                        ),
                                                        kind: IntDecimal(
                                                            1,
                                                        ),
                                                    },
                                                ),
                                                typ: Unknown,
                                            },
                                            ExprNode {
                                                pos: (
                                                    10,
                                                    13,
                                                ),
                                                kind: Literal(
                                                    LiteralNode {
                                                        pos: (
                                                            10,
                                                            13,
                                                        ),
                                                        kind: Str(
                                                            "wow",
                                                        ),
                                                    },
                                                ),
                                                typ: Unknown,
                                            },
                                        ],
                                    ),
                                    typ: Unknown,
                                },
                            ],
                            typ: Unknown,
                        },
                    ),
                    typ: Unknown,
                },
            ),
        },
    ],
}

