pluma_parser/tests/snapshots/parse_success__chain_across_lines.snap
---
source: pluma_parser/tests/parse_success.rs
expression: "\"hello\"\n  . f1\n  .f2"
---

=== Source ===
"hello"
  . f1
  .f2

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        1,
        20,
    ),
    body: [
        TopLevelStatementNode {
            pos: (
                1,
                20,
            ),
            kind: Expr(
                ExprNode {
                    pos: (
                        1,
                        20,
                    ),
                    kind: FieldAccess {
                        receiver: ExprNode {
                            pos: (
                                1,
                                14,
                            ),
                            kind: FieldAccess {
                                receiver: ExprNode {
                                    pos: (
                                        1,
                                        6,
                                    ),
                                    kind: Literal(
                                        LiteralNode {
                                            pos: (
                                                1,
                                                6,
                                            ),
                                            kind: Str(
                                                "hello",
                                            ),
                                        },
                                    ),
                                    typ: Unknown,
                                },
                                field: IdentifierNode {
                                    pos: (
                                        12,
                                        14,
                                    ),
                                    name: "f1",
                                },
                            },
                            typ: Unknown,
                        },
                        field: IdentifierNode {
                            pos: (
                                18,
                                20,
                            ),
                            name: "f2",
                        },
                    },
                    typ: Unknown,
                },
            ),
        },
    ],
}

